Blur Affect Added

--- a/ideaForge/Popups/DockAreaPropup.xaml
+++ b/ideaForge/Popups/DockAreaPropup.xaml
@@ -58,6 +58,7 @@
      SelectedValue="{Binding SelectedLocationId}"                   
    />
             <Button
+                x:Name="btnContinue"
                 Grid.Row="3"
                 Content="Continue"
                 Background="#91C84F"
